# KML

./: .buildinfo  .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  genindex.html  index.html  main.cc  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sitemap.xml  tox.ini
.github/workflows/: build.cmake  build.yml  cmake.yml  docs.yml  test.yml
_build/: kml.data_structures.histograms.html  kml.data_structures.html  kml.html  kml.metrics.html  kml.statistics.html  kml.statistics.summary.html  modules.html
_build/cpp_api/: classKML_1_1DataStructures_1_1IBin.html  classKML_1_1DataStructures_1_1IDataStructure.html  classKML_1_1DataStructures_1_1IStreamingHistogram.html  classKML_1_1DataStructures_1_1LinkedList.html  classKML_1_1DataStructures_1_1Node.html  classKML_1_1DataStructures_1_1RingBuffer.html  classKML_1_1DataStructures_1_1StreamingHistogram.html  classKML_1_1IStreaming.html  classKML_1_1Metrics_1_1IMetric.html  classKML_1_1Metrics_1_1StreamingMAD.html  (+130 more)
_modules/: index.html
_static/: documentation_options.js
cmake/: FindSphinx.cmake
doc/: Doxyfile.in
docs/: CMakeLists.txt  Doxyfile.in  Makefile  conf.py  index.rst  modules.rst
docs/docs/: KML.data_structures.rst  KML.metrics.rst  KML.rst  KML.statistics.rst  KML.statistics.summary.rst  modules.rst
docs/source/: Makefile  about.rst  anaconda-installation.txt  changelog.rst  conf.py  contributing.rst  index.rst  install.rst  license.rst  modules.rst  readme.rst  release.rst  roadmap.rst
docs/source/_templates/: module.rst_t  package.rst_t  toc.rst_t
docs/source/pages/: contributing.rst  cpp_guidelines.rst  examples.rst  install.rst  license.rst  modules.rst  python_guidelines.rst  readme.rst  release.rst
notebooks/: README.html
pages/: about.html  changelog.html  contributing.html  cpp_guidelines.html  examples.html  install.html  license.html  modules.html  python_guidelines.html  readme.html  release.html  roadmap.html
tools/cpp/KML/: CMakeLists.txt
tools/cpp/KML/include/: IStreaming.h  IStreaming.tcc
tools/cpp/KML/include/data_structures/: IDataStructure.h  IDataStructure.tcc  KMatrix.h  KSimpleMatrix.h  LinkedList.h  LinkedList.tcc  Node.h  Node.tcc  RingBuffer.h  RingBuffer.tcc
tools/cpp/KML/include/data_structures/histograms/: IBin.h  IBin.tcc  IStreamingHistogram.h  IStreamingHistogram.tcc  StreamingHistogram.h  StreamingHistogram.tcc
tools/cpp/KML/include/metrics/: IMetric.h  IMetric.tcc  StreamingMAD.h
tools/cpp/KML/include/neural_networks/: IModule.h
tools/cpp/KML/include/neural_networks/layers/: Dense.h  ILayer.h
tools/cpp/KML/include/neural_networks/layers/activations/: IActivation.h  Identity.h  ReLU.h  Sigmoid.h  Softmax.h  Tanh.h
tools/cpp/KML/include/neural_networks/losses/: ILoss.h  MSE.h
tools/cpp/KML/include/neural_networks/models/: IModel.h  Sequential.h
tools/cpp/KML/include/optimizers/: IOptimizer.h  IOptimizer.tcc  StochasticGradientDescent.h
tools/cpp/KML/include/statistics/: IStreamingStatistic.h
tools/cpp/KML/include/statistics/summary/: IStreamingStatistic.h  IStreamingStatistic.tcc  StreamingEntropy.h  StreamingIQR.h  StreamingMean.h  StreamingP2Quantile.h  StreamingVariance.h  WindowedFAME.h  WindowedFame.h  WindowedP2Quantile.h
tools/cpp/KML/include/statistics/transformers/: AdaptiveNormalizer.h  ITransformer.h  ITransformer.tcc
tools/cpp/KML/include/utils/: Utils.h
tools/cpp/KML/src/: CMakeLists.txt  IStreaming.h  IStreaming.tcc
tools/cpp/KML/src/data_structures/: KSimpleMatrix.cc  LinkedList.cc  LinkedList.h  RingBuffer.h
tools/cpp/KML/src/metrics/: StreamingMAD.cc
tools/cpp/KML/src/neural_network/layers/: dense.cc  dense.h  layer.cc  layer.h
tools/cpp/KML/src/neural_network/layers/activations/: activation.cc  activation.h
tools/cpp/KML/src/neural_network/layers/initializers/: initializers.tcc
tools/cpp/KML/src/neural_network/utils/: utils.cc  utils.h
tools/cpp/KML/src/neural_networks/: IModule.cc
tools/cpp/KML/src/neural_networks/layers/: Dense.cc  ILayer.cc
tools/cpp/KML/src/neural_networks/layers/activations/: ReLU.cc  Sigmoid.cc  Tanh.cc
tools/cpp/KML/src/neural_networks/losses/: ILoss.cc  MSE.cc
tools/cpp/KML/src/neural_networks/models/: IModel.cc  Sequential.cc
tools/cpp/KML/src/statistics/: IStreamingStatistic.h  IStreamingStatistic.tcc  StreamingIQR.cc  StreamingIQR.h  StreamingMean.cc  StreamingMean.h  StreamingP2Quantile.cc  StreamingP2Quantile.h  StreamingVariance.cc  StreamingVariance.h  WindowedFame.cc  WindowedFame.h  WindowedP2Quantile.cc  WindowedP2Quantile.h
tools/cpp/KML/src/statistics/summary/: StreamingEntropy.cc  StreamingIQR.cc  StreamingMean.cc  StreamingP2Quantile.cc  StreamingVariance.cc  WindowedFAME.cc  WindowedP2Quantile.cc
tools/cpp/KML/src/statistics/transformers/: AdaptiveNormalizer.cc  ITransformer.h  ITransformer.tcc
tools/cpp/KML/src/templates/: KMLearnInterface.h  SimpleKMLearn.h
tools/cpp/KML/src/transformers/: transformer.h
tools/cpp/KML/src/unsupervised/clustering/: cluster.cc  cluster.h
tools/cpp/KML/src/unsupervised/clustering/kmeans/: kmeans.cc  kmeans.h
tools/cpp/KML/src/utils/: Utils.cc
tools/cpp/KML/tests/: CMakeLists.txt  Eigen-test.cc
tools/cpp/KML/tests/statistics/: test_StreamingMean.cc  test_StreamingP2Quantile.cc  test_StreamingVariance.cc  test_WindowedFame.cc  test_WindowedP2Quantile.cc
tools/cpp/apps/: CMakeLists.txt
tools/cpp/tests/: CMakeLists.txt  main.cc
tools/cpp/tests/data_structures/: test_KMatrix.cc  test_LinkedList.cc  test_RingBuffer.cc
tools/cpp/tests/data_structures/histograms/: test_IBin.cc  test_StreamingHistogram.cc
tools/cpp/tests/metrics/: test_StreamingMAD.cc
tools/cpp/tests/neural_networks/layers/: test_Dense.cc
tools/cpp/tests/neural_networks/models/: test_Sequential.cc
tools/cpp/tests/statistics/summary/: test_StreamingEntropy.cc  test_StreamingMean.cc  test_StreamingP2Quantile.cc  test_StreamingVariance.cc  test_WindowedFame.cc  test_WindowedP2Quantile.cc
(+272 files in other folders)
